--- a/Torque3D.Net.csproj
+++ b/Torque3D.Net.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="source\Core\ConsoleInterface.cs" />
     <Compile Include="source\Main\MainClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
