--- a/Torque3D.Net.csproj
+++ b/Torque3D.Net.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="source\Core\ConsoleInterface.cs" />
+    <Compile Include="source\Core\Sim.cs" />
     <Compile Include="source\Main\MainClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
